go_sprint/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sprint-management
  labels:
    name: sprint-management
    environment: production
